IMPL Purchase service